--- a/libmemcached/ChangeLog
+++ b/libmemcached/ChangeLog
@@ -1,3 +1,7 @@
+0.30
+  * Added memcachd_dump command (and framework for memdump tool)
+  * Realigned all structures to remove padding (and line up important bits for 64bit caches.
+
 0.29 Tue May 19 08:26:48 PDT 2009
   * Fixed malloc usage to calloc for spots where we need zero filled memory. 
   * All code warnings now treated as errors.
