replace memcached man page with moxi man page

--- a/doc/moxi.1
+++ b/doc/moxi.1
@@ -1,6 +1,6 @@
-.TH MEMCACHED 1 "April 11, 2005"
+.TH MEMCACHED 1 "June 18, 2009"
 .SH NAME
-memcached \- high-performance memory object caching system
+moxi \- a fast, multithreaded memcached protocol proxy
 .SH SYNOPSIS
 .B memcached
 .RI [ options ]
