fixed moxi doc typos

--- a/doc/moxi/configuration.org
+++ b/doc/moxi/configuration.org
@@ -166,11 +166,14 @@ That is because moxi will probably (incorrectly) think you meant...
 There is one more case of using the -z configuration, which is
 specifying a direct port=host:port,host:port list, and avoiding
 libconflate.  In this mode, moxi is not talking with mcp and is
-operating standalone, such as on a developer laptop, when when running standalone.  So...
+operating standalone, such as on a developer laptop, when running
+standalone.  So...
 
   moxi -z [port]=[host:port],[host:port],...
 
-For example, below moxi will listen on port 11211 and forward requests to memcached servers running on host:port of mc1:11222 and mc2:11233...
+For example, below moxi will listen on port 11211 and forward requests
+to memcached servers running on host:port of mc1:11222 and
+mc2:11233...
 
   moxi -z 11211=mc1:11222,mc2:11233
 
@@ -261,7 +264,8 @@ Some of the valid keys are (circa 2009/06)...
     int  port;        // SL.
     char bucket[250]; // SL.
 
-For example, in standalone mode (without libconflate), in order to setup a front_cache, you might have...
+For example, in standalone mode (without libconflate), in order to
+setup a front_cache, you might have...
 
   moxi \
    -z "11211=mc1:11222,mc2:11333" \
