updated REST url cmd-line README docs

--- a/README
+++ b/README
@@ -128,7 +128,7 @@ Then start a "pretend" memcached server...
 
 Then...
 
-  ./moxi -vvv -z auth=,url=http://localhost:4567,#@ -Z port_listen=11211
+  ./moxi -vvv -z auth=,url=http://localhost:4567/pools/default/bucketsStreaming/default,#@ -Z port_listen=11211
 
 Then...
 
