--- a/doc/moxi/configuration.org
+++ b/doc/moxi/configuration.org
@@ -240,6 +240,7 @@ Some of the valid keys are (circa 2009/06)...
 
     uint32_t       cycle;               // IL: Clock resolution in millisecs.
     uint32_t       downstream_max;      // PL: Downstream concurrency.
+    uint32_t       downstream_conn_max; // PL: Max # of conns per thread per host_ident.
     uint32_t       downstream_weight;   // SL: Server weight.
     uint32_t       downstream_retry;    // SL: How many times to retry a cmd.
     enum protocol  downstream_protocol; // SL: Favored downstream protocol.
